Updated some stuff

--- a/src/main/resources/acf-core_en.properties
+++ b/src/main/resources/acf-core_en.properties
@@ -42,6 +42,6 @@ acf-core.help_no_results=Error: No more results.
 acf-core.help_header=&6=== &eShowing help for &6{commandprefix}{command} ===
 acf-core.help_format=&e{command} &6{parameters} {separator} {description}
 acf-core.help_detailed_header=&6=== &eShowing detailed help for &6{commandprefix}{command} ===
-acf-core.help_detailed_command_format=&e{command} &6{parameters} &f{separator} {description}
+acf-core.help_detailed_command_format=&e{command} &6{parameters} &7{separator} {description}
 acf-core.help_detailed_parameter_format=&6{syntaxorname}: &e{description}
 acf-core.help_search_header=&6=== &eSearch results for for &6{commandprefix}{command} {search} ===
